Opened 16 years ago

Closed 16 years ago

#2331 closed bug (fixed)

[MediaPlayer] sometimes starts with corrupted interface

Reported by: diver Owned by: marcusoverhagen
Priority: normal Milestone: R1
Component: Applications/MediaPlayer Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Sometimes MediaPlayer starts with corrupted interface, black parts or even random colored parts. Also resizing MediaPlayer currently uses too much cpu. Tested in vmware with hrev25780.

Change History (5)

comment:1 by bonefish, 16 years ago

The first part is probably fixed in hrev26192.

comment:2 by diver, 16 years ago

I still see black parts after several restarts of MediaPlayer.

comment:3 by stippi, 16 years ago

Yes, this is a different bug. The video view is sometimes still visible even though there is no video.

comment:4 by diver, 16 years ago

This seems to be fixed, Stippi?

comment:5 by stippi, 16 years ago

Resolution: fixed
Status: newclosed

Ah yes, see first comment. The CPU thing is probably fixed by my optimizations to rendering scaled bitmaps.

Note: See TracTickets for help on using tickets.